// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialpad /> when given required props should render correctly 1`] = `
<div>
  <div
    id="dialpadMask"
    style={
      Object {
        "height": "100vh",
        "left": "0px",
        "position": "fixed",
        "top": "0px",
        "width": "100vw",
        "zIndex": 2,
      }
    }
  />
  <div
    id="dialpadtriangle"
    style={
      Object {
        "borderBottom": "10px solid white",
        "borderLeft": "8px solid transparent",
        "borderRight": "8px solid transparent",
        "borderTop": "none",
        "height": "0px",
        "left": "12px",
        "position": "absolute",
        "width": "0px",
        "zIndex": 4,
      }
    }
  />
  <div
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": "3px",
          "boxShadow": "0 0 6px 0 rgba(0,0,0,0.23)",
          "color": "#4B4B4B",
          "left": "-110px",
          "overflow": "hidden",
          "padding": "25px 20px 20px",
          "position": "absolute",
          "top": "52px",
          "width": "282px",
          "zIndex": 11,
        },
        Object {
          "left": "-110px",
        },
      ]
    }
  >
    <div
      id="mockId"
      style={
        Object {
          "zIndex": "4",
        }
      }
    >
      <div
        style={
          Object {
            "margin": "0px auto 10px",
            "width": "100%",
          }
        }
      >
        <Connect(ErrorBoundaryComponent)
          changeSelected={[Function]}
          channelTypes={
            Array [
              "voice",
            ]
          }
          styles={
            Object {
              "height": "32px",
              "zIndex": 14,
            }
          }
          valueSelected={
            Object {
              "mockValue": "mock-value",
            }
          }
        />
      </div>
      <InjectIntl(TextInput)
        autoFocus={true}
        cb={[Function]}
        id="mockIdTextInput"
        onKeyDown={[Function]}
        style={
          Object {
            "height": "32px",
            "width": "100%",
          }
        }
        value="mockDialpadText"
      />
      <div
        style={
          Object {
            "marginTop": "13px",
          }
        }
      >
        <ButtonDialpad
          id="mockId1Button"
          onClick={[Function]}
          text="1"
          type="topLeft"
        />
        <ButtonDialpad
          id="mockId2Button"
          onClick={[Function]}
          subText="ABC"
          text="2"
          type="top"
        />
        <ButtonDialpad
          id="mockId3Button"
          onClick={[Function]}
          subText="DEF"
          text="3"
          type="topRight"
        />
        <ButtonDialpad
          id="mockId4Button"
          onClick={[Function]}
          subText="GHI"
          text="4"
          type="left"
        />
        <ButtonDialpad
          id="mockId5Button"
          onClick={[Function]}
          subText="JKL"
          text="5"
          type="middle"
        />
        <ButtonDialpad
          id="mockId6Button"
          onClick={[Function]}
          subText="MNO"
          text="6"
          type="right"
        />
        <ButtonDialpad
          id="mockId7Button"
          onClick={[Function]}
          subText="PQRS"
          text="7"
          type="left"
        />
        <ButtonDialpad
          id="mockId8Button"
          onClick={[Function]}
          subText="TUV"
          text="8"
          type="middle"
        />
        <ButtonDialpad
          id="mockId9Button"
          onClick={[Function]}
          subText="WXYZ"
          text="9"
          type="right"
        />
        <ButtonDialpad
          id="mockIdStarButton"
          onClick={[Function]}
          text="*"
          type="bottomLeft"
        />
        <ButtonDialpad
          id="mockId0Button"
          onClick={[Function]}
          text="0"
          type="bottom"
        />
        <ButtonDialpad
          id="mockIdNumberButton"
          onClick={[Function]}
          text="#"
          type="bottomRight"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialpad /> when inCall prop set to true should render correctly 1`] = `
<div>
  <div
    id="dialpadMask"
    style={
      Object {
        "height": "100vh",
        "left": "0px",
        "position": "fixed",
        "top": "0px",
        "width": "100vw",
        "zIndex": 2,
      }
    }
  />
  <div
    id="dialpadtriangle"
    style={
      Object {
        "borderBottom": "10px solid white",
        "borderLeft": "8px solid transparent",
        "borderRight": "8px solid transparent",
        "borderTop": "none",
        "height": "0px",
        "left": "12px",
        "position": "absolute",
        "width": "0px",
        "zIndex": 4,
      }
    }
  />
  <div
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": "3px",
          "boxShadow": "0 0 6px 0 rgba(0,0,0,0.23)",
          "color": "#4B4B4B",
          "left": "-110px",
          "overflow": "hidden",
          "padding": "25px 20px 20px",
          "position": "absolute",
          "top": "52px",
          "width": "282px",
          "zIndex": 11,
        },
        Object {
          "left": "-110px",
        },
      ]
    }
  >
    <div
      id="mockId"
      style={
        Object {
          "zIndex": "4",
        }
      }
    >
      <div
        style={
          Object {
            "margin": "0px auto 10px",
            "width": "100%",
          }
        }
      >
        <Connect(ErrorBoundaryComponent)
          changeSelected={[Function]}
          channelTypes={
            Array [
              "voice",
            ]
          }
          styles={
            Object {
              "height": "32px",
              "zIndex": 14,
            }
          }
          valueSelected={
            Object {
              "mockValue": "mock-value",
            }
          }
        />
      </div>
      <InjectIntl(TextInput)
        autoFocus={true}
        cb={[Function]}
        id="mockIdTextInput"
        onKeyDown={[Function]}
        style={
          Object {
            "height": "32px",
            "width": "100%",
          }
        }
        value="mockDialpadText"
      />
      <div
        style={
          Object {
            "marginTop": "13px",
          }
        }
      >
        <ButtonDialpad
          id="mockId1Button"
          onClick={[Function]}
          text="1"
          type="topLeft"
        />
        <ButtonDialpad
          id="mockId2Button"
          onClick={[Function]}
          subText="ABC"
          text="2"
          type="top"
        />
        <ButtonDialpad
          id="mockId3Button"
          onClick={[Function]}
          subText="DEF"
          text="3"
          type="topRight"
        />
        <ButtonDialpad
          id="mockId4Button"
          onClick={[Function]}
          subText="GHI"
          text="4"
          type="left"
        />
        <ButtonDialpad
          id="mockId5Button"
          onClick={[Function]}
          subText="JKL"
          text="5"
          type="middle"
        />
        <ButtonDialpad
          id="mockId6Button"
          onClick={[Function]}
          subText="MNO"
          text="6"
          type="right"
        />
        <ButtonDialpad
          id="mockId7Button"
          onClick={[Function]}
          subText="PQRS"
          text="7"
          type="left"
        />
        <ButtonDialpad
          id="mockId8Button"
          onClick={[Function]}
          subText="TUV"
          text="8"
          type="middle"
        />
        <ButtonDialpad
          id="mockId9Button"
          onClick={[Function]}
          subText="WXYZ"
          text="9"
          type="right"
        />
        <ButtonDialpad
          id="mockIdStarButton"
          onClick={[Function]}
          text="*"
          type="bottomLeft"
        />
        <ButtonDialpad
          id="mockId0Button"
          onClick={[Function]}
          text="0"
          type="bottom"
        />
        <ButtonDialpad
          id="mockIdNumberButton"
          onClick={[Function]}
          text="#"
          type="bottomRight"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dialpad /> when interactionId is set should render everything except the Outbound ANI selector 1`] = `
<div>
  <div
    id="dialpadMask"
    style={
      Object {
        "height": "100vh",
        "left": "0px",
        "position": "fixed",
        "top": "0px",
        "width": "100vw",
        "zIndex": 2,
      }
    }
  />
  <div
    id="dialpadtriangle"
    style={
      Object {
        "borderBottom": "10px solid white",
        "borderLeft": "8px solid transparent",
        "borderRight": "8px solid transparent",
        "borderTop": "none",
        "height": "0px",
        "left": "12px",
        "position": "absolute",
        "width": "0px",
        "zIndex": 4,
      }
    }
  />
  <div
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": "3px",
          "boxShadow": "0 0 6px 0 rgba(0,0,0,0.23)",
          "color": "#4B4B4B",
          "left": "-110px",
          "overflow": "hidden",
          "padding": "25px 20px 20px",
          "position": "absolute",
          "top": "52px",
          "width": "282px",
          "zIndex": 11,
        },
        Object {
          "left": "-110px",
        },
      ]
    }
  >
    <div
      id="mockId"
      style={
        Object {
          "zIndex": "4",
        }
      }
    >
      <InjectIntl(TextInput)
        autoFocus={true}
        cb={[Function]}
        id="mockIdTextInput"
        onKeyDown={[Function]}
        style={
          Object {
            "height": "32px",
            "width": "100%",
          }
        }
        value="mockDialpadText"
      />
      <div
        style={
          Object {
            "marginTop": "13px",
          }
        }
      >
        <ButtonDialpad
          id="mockId1Button"
          onClick={[Function]}
          text="1"
          type="topLeft"
        />
        <ButtonDialpad
          id="mockId2Button"
          onClick={[Function]}
          subText="ABC"
          text="2"
          type="top"
        />
        <ButtonDialpad
          id="mockId3Button"
          onClick={[Function]}
          subText="DEF"
          text="3"
          type="topRight"
        />
        <ButtonDialpad
          id="mockId4Button"
          onClick={[Function]}
          subText="GHI"
          text="4"
          type="left"
        />
        <ButtonDialpad
          id="mockId5Button"
          onClick={[Function]}
          subText="JKL"
          text="5"
          type="middle"
        />
        <ButtonDialpad
          id="mockId6Button"
          onClick={[Function]}
          subText="MNO"
          text="6"
          type="right"
        />
        <ButtonDialpad
          id="mockId7Button"
          onClick={[Function]}
          subText="PQRS"
          text="7"
          type="left"
        />
        <ButtonDialpad
          id="mockId8Button"
          onClick={[Function]}
          subText="TUV"
          text="8"
          type="middle"
        />
        <ButtonDialpad
          id="mockId9Button"
          onClick={[Function]}
          subText="WXYZ"
          text="9"
          type="right"
        />
        <ButtonDialpad
          id="mockIdStarButton"
          onClick={[Function]}
          text="*"
          type="bottomLeft"
        />
        <ButtonDialpad
          id="mockId0Button"
          onClick={[Function]}
          text="0"
          type="bottom"
        />
        <ButtonDialpad
          id="mockIdNumberButton"
          onClick={[Function]}
          text="#"
          type="bottomRight"
        />
      </div>
    </div>
  </div>
</div>
`;
